#90 BUG missing backgrounds on assignement material type

--- a/front-end/app/styles/_variables.scss
+++ b/front-end/app/styles/_variables.scss
@@ -31,8 +31,7 @@ $_precision: 10;
 $green1: #00838f;
 $green2: #00695c;
 $greengrass: #43a047;
-$green4: #CDDC39;
-$pinky: #985984;
+$pinky: #9c3a7d;
 $violet: #584D78;
 $navy: #274156;
 $cyan: #00498E;
